licensing (Gnu AGPL) and controllers 'auth' and 'pages'

--- a/development.ini
+++ b/development.ini
@@ -21,6 +21,7 @@ full_stack = true
 static_files = true
 
 cache_dir = %(here)s/data
+pages_dir = %(here)s/pages
 beaker.session.key = geometriki
 beaker.session.secret = somesecret
 
